// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createViewModelsReducer reducer work correctly 1`] = `
Object {
  "@@resolve/aggregateVersionsMap": Object {},
  "@@resolve/connectorMetaMap": Object {},
}
`;

exports[`createViewModelsReducer reducer work correctly 2`] = `
Object {
  "@@resolve/aggregateVersionsMap": Object {},
  "@@resolve/connectorMetaMap": Object {},
}
`;

exports[`createViewModelsReducer reducer work correctly 3`] = `
Object {
  "@@resolve/aggregateVersionsMap": Object {},
  "@@resolve/connectorMetaMap": Object {
    "Todos[\\"1\\",\\"2\\",\\"3\\"]{}": Object {
      "isFailure": false,
      "isLoading": true,
    },
  },
}
`;

exports[`createViewModelsReducer reducer work correctly 4`] = `
Object {
  "@@resolve/aggregateVersionsMap": Object {},
  "@@resolve/connectorMetaMap": Object {
    "Todos*{}": Object {
      "isFailure": false,
      "isLoading": true,
    },
    "Todos[\\"1\\",\\"2\\",\\"3\\"]{}": Object {
      "isFailure": false,
      "isLoading": true,
    },
  },
}
`;

exports[`createViewModelsReducer reducer work correctly 5`] = `
Object {
  "@@resolve/aggregateVersionsMap": Object {
    "Todos[\\"1\\",\\"2\\",\\"3\\"]{}": Object {
      "1": 1,
      "2": 1,
      "3": 2,
    },
  },
  "@@resolve/connectorMetaMap": Object {
    "Todos*{}": Object {
      "isFailure": false,
      "isLoading": true,
    },
    "Todos[\\"1\\",\\"2\\",\\"3\\"]{}": Object {
      "isFailure": false,
      "isLoading": false,
    },
  },
  "Todos": Object {
    "[\\"1\\",\\"2\\",\\"3\\"]": Object {
      "{}": Array [
        "A",
        "B",
        "C",
        "D",
      ],
    },
  },
}
`;

exports[`createViewModelsReducer reducer work correctly 6`] = `
Object {
  "@@resolve/aggregateVersionsMap": Object {
    "Todos*{}": Object {
      "1": 1,
      "2": 1,
      "3": 2,
    },
    "Todos[\\"1\\",\\"2\\",\\"3\\"]{}": Object {
      "1": 1,
      "2": 1,
      "3": 2,
    },
  },
  "@@resolve/connectorMetaMap": Object {
    "Todos*{}": Object {
      "isFailure": false,
      "isLoading": false,
    },
    "Todos[\\"1\\",\\"2\\",\\"3\\"]{}": Object {
      "isFailure": false,
      "isLoading": false,
    },
  },
  "Todos": Object {
    "*": Object {
      "{}": Array [
        "A",
        "B",
        "C",
        "D",
      ],
    },
    "[\\"1\\",\\"2\\",\\"3\\"]": Object {
      "{}": Array [
        "A",
        "B",
        "C",
        "D",
      ],
    },
  },
}
`;

exports[`createViewModelsReducer reducer work correctly 7`] = `
Object {
  "@@resolve/aggregateVersionsMap": Object {
    "Todos*{}": Object {
      "1": 1,
      "2": 1,
      "3": 2,
    },
    "Todos[\\"1\\",\\"2\\",\\"3\\"]{}": Object {
      "1": 1,
      "2": 1,
      "3": 2,
    },
  },
  "@@resolve/connectorMetaMap": Object {
    "Todos*{}": Object {
      "isFailure": false,
      "isLoading": false,
    },
    "Todos[\\"1\\",\\"2\\",\\"3\\"]{}": Object {
      "isFailure": false,
      "isLoading": false,
    },
  },
  "Todos": Object {
    "*": Object {
      "{}": Array [
        "A",
        "B",
        "C",
        "D",
      ],
    },
    "[\\"1\\",\\"2\\",\\"3\\"]": Object {
      "{}": Array [
        "A",
        "B",
        "C",
        "D",
      ],
    },
  },
}
`;

exports[`createViewModelsReducer reducer work correctly 8`] = `
Object {
  "@@resolve/aggregateVersionsMap": Object {
    "Todos*{}": Object {
      "1": 1,
      "2": 1,
      "3": 2,
    },
    "Todos[\\"1\\",\\"2\\",\\"3\\"]{}": Object {
      "1": 1,
      "2": 1,
      "3": 2,
    },
  },
  "@@resolve/connectorMetaMap": Object {
    "Todos*{}": Object {
      "isFailure": false,
      "isLoading": false,
    },
    "Todos[\\"1\\",\\"2\\",\\"3\\"]{}": Object {
      "isFailure": false,
      "isLoading": false,
    },
  },
  "Todos": Object {
    "*": Object {
      "{}": Array [
        "A",
        "B",
        "C",
        "D",
      ],
    },
    "[\\"1\\",\\"2\\",\\"3\\"]": Object {
      "{}": Array [
        "A",
        "B",
        "C",
        "D",
      ],
    },
  },
}
`;

exports[`createViewModelsReducer reducer work correctly 9`] = `
Object {
  "@@resolve/aggregateVersionsMap": Object {
    "Todos*{}": Object {
      "1": 1,
      "2": 1,
      "3": 2,
    },
  },
  "@@resolve/connectorMetaMap": Object {
    "Todos*{}": Object {
      "isFailure": false,
      "isLoading": false,
    },
  },
  "Todos": Object {
    "*": Object {
      "{}": Array [
        "A",
        "B",
        "C",
        "D",
      ],
    },
    "[\\"1\\",\\"2\\",\\"3\\"]": Object {},
  },
}
`;

exports[`createViewModelsReducer reducer work correctly 10`] = `
Object {
  "@@resolve/aggregateVersionsMap": Object {},
  "@@resolve/connectorMetaMap": Object {},
  "Todos": Object {
    "*": Object {},
    "[\\"1\\",\\"2\\",\\"3\\"]": Object {},
  },
}
`;

exports[`createViewModelsReducer reducer work correctly 11`] = `
Object {
  "@@resolve/aggregateVersionsMap": Object {},
  "@@resolve/connectorMetaMap": Object {},
  "Todos": Object {
    "*": Object {},
    "[\\"1\\",\\"2\\",\\"3\\"]": Object {},
  },
}
`;

exports[`createViewModelsReducer reducer work correctly 12`] = `
Object {
  "@@resolve/aggregateVersionsMap": Object {},
  "@@resolve/connectorMetaMap": Object {
    "Todos*{}": Object {
      "isFailure": false,
      "isLoading": true,
    },
  },
  "Todos": Object {
    "*": Object {},
    "[\\"1\\",\\"2\\",\\"3\\"]": Object {},
  },
}
`;

exports[`createViewModelsReducer reducer work correctly 13`] = `
Object {
  "@@resolve/aggregateVersionsMap": Object {},
  "@@resolve/connectorMetaMap": Object {
    "Todos*{}": Object {
      "error": "error",
      "isFailure": true,
      "isLoading": false,
    },
  },
  "Todos": Object {
    "*": Object {},
    "[\\"1\\",\\"2\\",\\"3\\"]": Object {},
  },
}
`;
